--- a/src/main/resources/templates/usr/member/login.html
+++ b/src/main/resources/templates/usr/member/login.html
@@ -1,16 +1,8 @@
 <h1>로그인</h1>
-<div th:if="${member != null}">
-    <h1>내 정보</h1>
 
-    <h2>회원번호 : [[${member.id}]]</h2>
-    <h2>아이디 : [[${member.username}]]</h2>
-</div>
-<div th:if="${member == null}">
-    <h1>이미 로그인 되었습니다.</h1>
-</div>
 
-<!--<form method="POST" action="login">-->
-<!--    <input type="text" placeholder="아이디" name="username">-->
-<!--    <input type="password" placeholder="비밀번호" name="password">-->
-<!--    <input type="submit" value="로그인">-->
-<!--</form>-->
+<form method="POST" action="login">
+    <input type="text" placeholder="아이디" name="username">
+    <input type="password" placeholder="비밀번호" name="password">
+    <input type="submit" value="로그인">
+</form>
